src/character/background/snapshots/bag_of_tricks__character__background__faction_agent__tests__skills.snap
---
source: src/character/background/faction_agent.rs
expression: "FactionAgent::skills()"

---
- Insight
- AnimalHandling
- Arcana
- Deception
- History
- Insight
- Intimidation
- Investigation
- Medicine
- Nature
- Perception
- Performance
- Persuasion
- Religion
- Survival

