src/character/background/snapshots/bag_of_tricks__character__background__faction_agent__tests__snapshot.snap
---
source: src/character/background/faction_agent.rs
expression: background

---
- type: FactionAgent
  faction: OrderOfTheGauntlet
- bond: I seek to preserve a secret text that my enemies consider heretical and seek to destroy.
  flaw: "I judge others harshly, and myself even more severely."
  ideal:
    - "Faith. I trust that my faction will guide my actions. I have faith that if I work hard, things will go well."
    - Lawful
  traits:
    - "I've enjoyed fine food, drink, and high society among my faction's elite. Rough living grates on me."
    - I quote (or misquote) faction texts and proverbs in almost every situation.

