src/character/background/snapshots/bag_of_tricks__character__background__faction_agent__tests__snapshot_addl_proficiences.snap
---
source: src/character/background/faction_agent.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - AnimalHandling
      - Arcana
      - Deception
      - History
      - Insight
      - Intimidation
      - Investigation
      - Medicine
      - Nature
      - Perception
      - Performance
      - Persuasion
      - Religion
      - Survival
    - 1

