src/character/background/snapshots/bag_of_tricks__character__background__faction_agent__tests__snapshot_coins.snap
---
source: src/character/background/faction_agent.rs
expression: background.coins()

---
- Gold
- 15

