src/character/background/snapshots/bag_of_tricks__character__background__faction_agent__tests__snapshot_display.snap
---
source: src/character/background/faction_agent.rs
expression: background

---
The Order of the Gauntlet Faction Agent
