src/character/background/snapshots/bag_of_tricks__character__background__faction_agent__tests__snapshot_equipment.snap
---
source: src/character/background/faction_agent.rs
expression: background.equipment()

---
- Other: the badge or emblem of your faction
- Other: a copy of a seminal faction text (or a code-book for a covert faction)
- Gear:
    Other: ClothesCommon
- Gear:
    Other: Pouch

